Here is a useless commit message which will come back to bite me later

--- a/bukkit/pom.xml
+++ b/bukkit/pom.xml
@@ -21,14 +21,35 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+  <modelVersion>4.0.0</modelVersion>
+
+  <build>
+    <defaultGoal>clean package</defaultGoal>
+  </build>
+
+  <artifactId>arcaneframework-bukkit</artifactId>
+  <version>0.1.0</version>
+  <packaging>jar</packaging>
   <parent>
     <artifactId>arcaneframework-parent</artifactId>
     <groupId>me.lokka30.arcaneframework</groupId>
     <version>0.1.0</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
-
-  <artifactId>arcaneframework-bukkit</artifactId>
+  <dependencies>
+    <dependency>
+      <groupId>org.spigotmc</groupId>
+      <artifactId>spigot-api</artifactId>
+      <version>1.18.2-R0.1-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.spongepowered</groupId>
+      <artifactId>configurate-yaml</artifactId>
+      <version>4.1.2</version> <!-- remember to edit libraries list in plugin.yml if updating -->
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
 
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
@@ -38,5 +59,13 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
   <name>ArcaneFramework - Bukkit</name>
   <description>ArcaneFramework for Bukkit Plugins</description>
+
+  <repositories>
+    <repository>
+      <id>spigotmc-repo</id>
+      <name>SpigotMC Repository</name>
+      <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
+    </repository>
+  </repositories>
 
 </project>
