--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
   <build>
     <defaultGoal>clean package</defaultGoal>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
+      </plugin>
+    </plugins>
   </build>
 
   <name>ArcaneFramework - Parent</name>
@@ -75,5 +82,19 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
     <system>GitHub Issues</system>
     <url>https://github.com/lokka30/ArcaneFramework/issues/</url>
   </issueManagement>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.jetbrains</groupId>
+      <artifactId>annotations</artifactId>
+      <version>23.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>5.9.1</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 
 </project>
