--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # This file was retrived from the ArcaneFramework source code. Learn more
 # about ArcaneFramework at <https://github.com/lokka30/ArcaneFramework/>.
 #
-# Copyright © 2022 lokka30 and contributors
+# Copyright © 2022-2023 lokka30 and contributors
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
