--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 This file was retrived from the ArcaneFramework source code. Learn more
 about ArcaneFramework at <https://github.com/lokka30/ArcaneFramework/>.
 
-Copyright © 2022 lokka30 and contributors
+Copyright © 2022-2023 lokka30 and contributors
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -23,9 +23,9 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>me.lokka30.arcaneframework</groupId>
+  <groupId>io.github.arcaneplugins.arcaneframework</groupId>
   <artifactId>arcaneframework-parent</artifactId>
-  <version>0.1.0</version>
+  <version>0.2.1</version>
   <modules>
     <module>bukkit</module>
     <module>core</module>
@@ -51,7 +51,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
   <name>ArcaneFramework - Parent</name>
   <description>Parent module of the ArcaneFramework source</description>
-  <url>https://github.com/lokka30/ArcaneFramework/</url>
+  <url>https://github.com/ArcanePlugins/ArcaneFramework/</url>
   <inceptionYear>2022</inceptionYear>
   <licenses>
     <license>
@@ -69,10 +69,10 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
       <name>Lachlan Adamson</name>
       <organization>ArcanePlugins</organization>
       <url>https://github.com/lokka30/</url>
-      <email>lokka30@protonmail.com</email>
+      <email>lachlan@mercurialdigital.com</email>
       <roles>
         <role>Director</role>
-        <role>Author</role>
+        <role>Maintainer</role>
       </roles>
       <timezone>8</timezone>
     </developer>
@@ -80,7 +80,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
   <issueManagement>
     <system>GitHub Issues</system>
-    <url>https://github.com/lokka30/ArcaneFramework/issues/</url>
+    <url>https://github.com/ArcanePlugins/ArcaneFramework/issues/</url>
   </issueManagement>
 
   <dependencies>
@@ -88,6 +88,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
       <groupId>org.jetbrains</groupId>
       <artifactId>annotations</artifactId>
       <version>23.1.0</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
