--- a/bukkit/pom.xml
+++ b/bukkit/pom.xml
@@ -56,6 +56,11 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
       <version>4.1.2</version> <!-- remember to edit libraries list in plugin.yml if updating -->
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>io.github.arcaneplugins.arcaneframework</groupId>
+      <artifactId>arcaneframework-core</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 
   <properties>
